NULL=

idldir = $(datadir)/idl

idl_DATA =				\
	Bonobo.idl			\
	bonobo-unknown.idl		\
	bonobo-advise.idl		\
	bonobo-ui.idl			\
	bonobo-listener.idl		\
	bonobo-zoomable.idl		\
	bonobo-canvas.idl		\
	bonobo-control.idl		\
	bonobo-client-site.idl		\
	bonobo-embeddable.idl		\
	bonobo-item-container.idl	\
	bonobo-persist.idl		\
	bonobo-storage.idl		\
	bonobo-progressive.idl		\
	bonobo-property.idl		\
	bonobo-desktop.idl		\
	bonobo-print.idl		\
	bonobo-moniker.idl		\
	$(NULL)

EXTRA_DIST = $(idl_DATA)
