NULL=

idldir = $(datadir)/idl

idl_DATA =				\
	Bonobo.idl			\
	Bonobo_Canvas.idl		\
	Bonobo_Context.idl		\
	Bonobo_Control.idl		\
	Bonobo_Embeddable.idl		\
	Bonobo_ItemContainer.idl	\
	Bonobo_Listener.idl		\
	Bonobo_Moniker.idl		\
	Bonobo_Persist.idl		\
	Bonobo_Print.idl		\
	Bonobo_Property.idl		\
	Bonobo_Storage.idl		\
	Bonobo_UI.idl			\
	Bonobo_Zoomable.idl		\
	Bonobo_Exception.idl		\
	Bonobo_Clipboard.idl		\
	$(NULL)

EXTRA_DIST = $(idl_DATA)
